# InGame

./: .doit.db.db  .flake8  .gitignore  MANIFEST.in  README.md  dodo.py  game_settings.py  ingame.py  main.py  menu.py  pyproject.toml  requirements.txt  setup.cfg  squid_game_level5.py  tests.py
CookieCutter/: constants.py  game.py  game_object.py
docs/: conf.py  game.rst  index.rst  lvl1_game.rst  lvl1_game_object.rst  menu.rst
ingame/: .doit.db.db  __init__.py  __main__.py  constants.py  game.py  game_settings.py  ingame.py  lvl1_game.py  lvl1_game_object.py  lvl2_game.py  lvl2_game_object.py  lvl3_game.py  menu.py
ingame/CookieCutter/: constants.py  game.py  game_object.py
ingame/RedLight-GreenLight/: constants.py  game.py  game_object.py
ingame/RedLight_GreenLight/: game.py  game_object.py
ingame/TugofWar/: TugOfWar.py
ingame/docs/: conf.py
ingame/docs/_build/doctrees/: environment.pickle  index.doctree
ingame/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
ingame/docs/_build/html/_sources/: index.rst.txt
ingame/tests/: tests.py
ingame/translation/en/LC_MESSAGES/: ingame.po
po/en/LC_MESSAGES/: ingame.po
tests/: tests.py
translation/en/LC_MESSAGES/: ingame.po
