[metadata]
name = ingame
version = 0.0.1

[flake8]
max-line-length = 100
ignore = F403, F405 ; Name may be undefined, or defined from star imports: module
exclude = test*.py

[pydocstyle]
convention = pep257
add_ignore = D202,D400
match = (?!test|conf|setup|dodo).*\.py

[options]
packages = ingame
include_package_data=True
install_requires = pygame

[options.package_data]
* = *.py, *.po

[options.packages.find]
where = ingame

[options.entry_points]
console_scripts =
    DateTime = app.__main__:main

[options.package_data]
app = */*/game.mo
images = *.png *.jpg