[metadata]
name = ingame
version = 0.0.1

[flake8]
max-line-length = 100
ignore = F403, F405 ; Name may be undefined, or defined from star imports: module
exclude = test*.py

[pydocstyle]
convention = pep257
match = (?!test|conf|setup|dodo).*\.py

[options]
packages = ingame
install_requires = pygame

[options.package_data]
* = *.po, *.png, *.jpg, *.mp3, *.po
ingame = ./*/*/*/*.po, ingame/images/*.png, ./*/*/*/*.mo