[metadata]
name = ingame
version = 0.0.1

[flake8]
max-line-length = 100
ignore = F403, F405, E722, W503 ; Name may be undefined, or defined from star imports: module
exclude = test*.py, venv*/. conf*.py

[pydocstyle]
convention = pep257
match = (?!test|conf|setup|dodo).*\.py

[options]
packages = ingame
install_requires = pygame

[options.package_data]
ingame = */*.png, */*.jpg, */*.mp3, */*/*/*.mo, */*/*/*.po